@@ -1,3 +1,7 @@
+7 July 2011: dht-0.20
+
+  * Fix compilation on systems that have memmem but don't define HAVE_MEMMEM.
+
 30 April 2011: dht-0.19
 
   * Fix incorrect parsing of announces.  Thanks to cjdelisle.
